modified:   adp-2025-testgrad/.env.example

--- a/adp-2025-testgrad/.env.example
+++ b/adp-2025-testgrad/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/adp-2025-testgrad
+DATABASE_URI=mongodb+srv://annielacoba:ApxPisXdI2RIwJbg@adpgrad2025.psayv.mongodb.net/?retryWrites=true&w=majority&appName=ADPGrad2025
 PAYLOAD_SECRET=peVMRA16Xj0dHOs8BeJQsjDWVXX1IAiiogupaFi3bcY=
