--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           node-version: "23.3.0"
 
+      # Set PAYLOAD_SECRET as environment variable for the build process
+      - name: Set PAYLOAD_SECRET
+        run: echo "PAYLOAD_SECRET=${{ secrets.PAYLOAD_SECRET }}" >> $GITHUB_ENV
+
       #Setup AWS credentials
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
