added amplify backend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URI=mongodb+srv://annielacoba:ApxPisXdI2RIwJbg@adpgrad2025.psayv.mongodb.net/?retryWrites=true&w=majority&appName=ADPGrad2025
 PAYLOAD_SECRET=peVMRA16Xj0dHOs8BeJQsjDWVXX1IAiiogupaFi3bcY=
+NEXT_PUBLIC_SERVER_URL=https://main.d2a7r81mo8vzss.amplifyapp.com
