--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "cross-env": "^7.0.3",
+    "express": "^4.21.2",
     "graphql": "^16.8.1",
     "next": "15.2.2",
     "payload": "^3.28.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "0.32.6",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.5.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
