--- a/package.json
+++ b/package.json
@@ -15,15 +15,21 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "latest",
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@aws-sdk/client-s3": "^3.772.0",
+    "@payloadcms/db-mongodb": "^3.27.0",
+    "@payloadcms/next": "^3.27.0",
+    "@payloadcms/payload-cloud": "^3.27.0",
+    "@payloadcms/richtext-lexical": "^3.27.0",
+    "@payloadcms/storage-s3": "^3.27.0",
+    "aws-sdk": "^2.1692.0",
+    "cloudinary": "^2.6.0",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.8.1",
     "next": "15.2.2",
-    "payload": "^3.28.1",
+    "payload": "^3.27.0",
+    "payload-cloudinary-plugin": "^0.1.14",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sharp": "0.32.6",
